gitlab/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
      - name: gitlab
        image: gitlab/gitlab-ce:15.1.2-ce.0
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: ssh
          containerPort: 22
        volumeMounts:
        - name: gitlab-volume
          mountPath: /var/opt/gitlab
          subPath: data
        - name: gitlab-volume
          mountPath: /etc/gitlab
          subPath: config
        - name: gitlab-volume
          mountPath: /var/log/gitlab
          subPath: logs
      volumes:
      - name: gitlab-volume
        persistentVolumeClaim:
          claimName: gitlab-pv-claim
