gitlab/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: devops
spec:
  type: ClusterIP   # 改成ClusterIP
  selector:
    app: gitlab
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  - name: ssh
    port: 22
    targetPort: 22
